@@ -1,3 +1,5 @@
+* Restrictions are now checked on the client side instead of by the server and sending users back to the score entry page on an error.
+
 * Added support for computed goals.
 
 * Terms of polynomial score elements may now specify the floating point handling.  The default handling is to truncate decimals to integers at each term.
